<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/main1"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/imageButton5"
        app:layout_constraintHorizontal_bias="0.588"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton5"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="229dp"
        android:layout_height="151dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/chicagopizza" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:text="@string/main2"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/imageButton6"
        app:layout_constraintHorizontal_bias="0.586"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:text="@string/main3"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/imageButton7"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="160dp"
        android:text="@string/main4"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <ImageButton
        android:id="@+id/imageButton6"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="229dp"
        android:layout_height="153dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton5"
        app:srcCompat="@drawable/nypizzapie" />

    <ImageButton
        android:id="@+id/imageButton7"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="240dp"
        android:layout_height="152dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="12dp"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton6"
        app:srcCompat="@drawable/currentorder" />

    <ImageButton
        android:id="@+id/imageButton8"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="261dp"
        android:layout_height="217dp"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.964"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/imageButton7"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/storeorders" />

</androidx.constraintlayout.widget.ConstraintLayout>