<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityNY">

    <Button
        android:id="@+id/add_order1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="20dp"
        android:text="@string/activity2name3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/price1"
        android:layout_width="139dp"
        android:layout_height="39dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="16dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/add_order1"
        app:layout_constraintEnd_toEndOf="@+id/add_order1" />

    <ImageView
        android:id="@+id/pizza_image1"
        android:layout_width="192dp"
        android:layout_height="155dp"
        app:layout_constraintBottom_toTopOf="@+id/SelectToppings1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.882"
        app:layout_constraintStart_toEndOf="@+id/size_spinner1"
        app:layout_constraintTop_toBottomOf="@+id/pizza_option1"
        app:layout_constraintVertical_bias="0.377"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/crust1"
        android:layout_width="154dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="156dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/toppings_view1"
        android:layout_width="256dp"
        android:layout_height="186dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="336dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/SelectToppings1"
        android:layout_width="214dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/activity2name1"
        app:layout_constraintBottom_toTopOf="@+id/toppings_view1"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="173dp"
        android:layout_height="53dp"
        android:layout_marginBottom="16dp"
        android:text="@string/activity2name2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/add_order1"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/size_spinner1"
        android:layout_width="151dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="68dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pizza_option1"
        android:layout_width="182dp"
        android:layout_height="39dp"
        android:layout_marginBottom="34dp"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/size_spinner1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>